# Hack-back-chugun

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .example.env  .flake8  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 6f4b3b3469ee_update_hobbycourses_table.py  75dbccda8fc6_update_tables.py  77da316c26a2_update_tables.py  856ef56a09b2_update_courses_table.py  8c2d8d85c583_update_user_table.py  c00401af4d6e_update_user_table.py  c2b84cac356f_initial_migrate.py  e203832b2c94_update_user_table.py
backend/configs/: __init__.py  api_settings.py  database_config.py  descriptors.py
backend/src/: __init__.py  application.py
backend/src/core/dto/: __init__.py  courses_dto.py  forums_dto.py  hobby_dto.py  portfolio_dto.py  recommends_dto.py  university_dto.py  user_dto.py  vacancies_dto.py
backend/src/core/errors/: auth_errors.py  courses_errors.py  hobby_course_errors.py  portfolio_errors.py  recommends_errors.py  university_errors.py  user_errors.py  vacancy_errors.py
backend/src/core/routers/: __init__.py  courses_router.py  forum_router.py  hobby_router.py  portfolio_router.py  recommends_router.py  university_router.py  user_router.py  vacansy_router.py
backend/src/core/services/: courses_service.py  hobby_service.py  portfolio_service.py  recommends_service.py  university_service.py  user_hobbies_service.py  user_service.py  (+1 more)
backend/src/databases/: __init__.py  db_worker.py  main_base.py
backend/src/other/: __init__.py  logger.py  scripts.py
(+52 files in other folders)
