[tool.poetry]
name = "hack-back-chugun"
version = "0.1.0"
description = ""
authors = ["darkfos82 <darkfos82@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.3"}
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
redis = "^5.2.1"
pyjwt = "^2.10.1"
uvicorn = "^0.32.1"
logger = "^1.4"
flake8 = "^7.1.1"
black = "^24.10.0"
autoflake = "^2.3.1"
bcrypt = "^4.2.1"
pymongo = "^4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
