[tool.poetry]
name = "edu-connect-backend"
version = "0.1.0"
description = "Backend for edu-connect (RKSI Hack 2024)"
authors = ["darkfos82 <darkfos82@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
alembic = "^1.14.0"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
